crates/rolldown_utils/tests/ui/pass_harness/fail_unit_output_pattern.stderr
error[E0308]: mismatched types
  --> tests/ui/pass_harness/fail_unit_output_pattern.rs:30:8
   |
30 |   let ((), ()) = run_infallible_pass(UnitPass, &mut pipeline, (), ());
   |        ^^        ---------------------------------------------------- this expression has type `(Sealed<()>, ())`
   |        |
   |        expected `Sealed<()>`, found `()`
   |
   = note: expected struct `Sealed<()>`
           found unit type `()`
